--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^18",
     "next": "^14",
     "@supabase/supabase-js": "^2.39.0",
-    "@supabase/auth-helpers-nextjs": "^0.8.7"
+    "@supabase/ssr": "^0.0.10"
   },
   "devDependencies": {
     "typescript": "^5",
